# enchanted-twin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  LIVEKIT_INTEGRATION.md  Makefile  README.md  SOFTWARE_ARCHITECTURE.md  docker-compose.e2e.yml  package.json  render.yaml  runtime-dependencies.json
app/src/main/python/anonymiser/: anonymizer.py  pyproject.toml  to_chat.py
backend/golang/cmd/memory-processor-test/anonymizer/: anonymize.py  call.py  compute_summary_stats.py  judge.py  pyproject.toml
backend/golang/cmd/memory-processor-test/anonymizer/datasets/: conversation_dataset.jsonl  generate_conversation_dataset.py  pii_test.jsonl  pii_test_new.jsonl  pii_train_new.jsonl
backend/golang/cmd/memory-processor-test/anonymizer/results/: test.jsonl  test_data_og.jsonl  test_data_og_judged.jsonl  test_data_reverted.jsonl  test_data_reverted_judged.jsonl  test_judged.jsonl  test_results.jsonl  test_results_conversation.jsonl  test_results_conversation_2.jsonl  test_results_conversation_2_judged.jsonl  test_results_conversation_2_judged_stats_by_turns.json  test_results_conversation_base.jsonl  test_results_conversation_base_judged.jsonl  test_results_conversation_base_judged_stats_by_turns.json  test_results_conversation_judged.json  test_results_conversation_judged_stats_by_turns.json  test_results_conversation_sft.jsonl  test_results_conversation_sft_judged.jsonl  test_results_conversation_sft_judged_stats_by_turns.json  test_results_judged.jsonl  test_results_judged_old.jsonl  test_results_parallel.jsonl  test_results_parallel_judged.jsonl  (+2 more)
(+1187 files in other folders)
