[project]
name = "anonymizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.87.0,<=1.90.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.7",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
    "vllm>=0.10.0",
]
